--- a/css/ParcelView.css
+++ b/css/ParcelView.css
@@ -4,12 +4,13 @@ input[type="text"] {
 
 .content {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 60vh;
+  justify-content: center;     /* centers horizontally */
+  align-items: center;         /* centers vertically */
+  min-height: 70vh;            /* adjusts vertical height */
   width: 100%;
   margin-top: 30px;
+  flex-direction: column;
+  text-align: center;
 }
 
 .section-title {
